<resources>
    <string name="app_name">MyShopApp</string>
    <string name="company_name">MyShop \n Üye Girişi</string>
    <string name="recaptcha_site_key">6LeKRLAZAAAAALPAGjCmTAwL3zWyNKmHjm2sUsZi</string>
    <string name="button_login">Giriş Yap</string>
    <string name="password">Şifre</string>
    <string name="e_mail">E-mail</string>
    <string name="dont_have_an_account">Hesabın yok mu?</string>
    <string name="do_you_already_have_an_account">Hesabın zaten var mı?</string>
    <string name="sign_up">Kaydol</string>
    <string name="name_surname">Ad ve Soyad</string>
    <string name="user_register">Kullanıcı Kayıt</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="home">ANASAYFA</string>
    <string name="profile">PROFILIM</string>
    <string name="card">Sepetim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="denied">Vazgeç</string>
</resources>