<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.SignInActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/company_name"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint="Email veya kullanıcı adı"
            android:text="duman4321"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnNextSignInActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/lightblue"
        android:onClick="signInUserOnClick"
        android:text="@string/button_login"
        android:enabled="true"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/tvFargotMyPasswordSignInActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        android:onClick="fargotMyPasswordOnClick"
        android:text="Parolamı Unuttum"
        app:layout_constraintEnd_toEndOf="@+id/btnNextSignInActivity"
        app:layout_constraintStart_toStartOf="@+id/btnNextSignInActivity"
        app:layout_constraintTop_toBottomOf="@+id/btnNextSignInActivity" />

    <TextView
        android:text="@string/dont_have_an_account"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" app:layout_constraintEnd_toStartOf="@+id/textView13"
        android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="120dp"/>
    <View android:layout_width="match_parent" android:layout_height="50dp"

        android:id="@+id/viewSignIn"
        android:onClick="userRegisterOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:text="12345678"
            android:inputType="textPassword"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>